--- a/style.css
+++ b/style.css
@@ -1,95 +1,129 @@
 body{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 h1{
-    font-size: 25px;
+    font-size: 2em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 h2{
-    font-size: 20px;
+    font-size: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 .jour{
     
-    background-color: rgb(0, 255, 234);
-    grid-area: 1/2/2/-1;
-    text-align: center;
-    /*position: absolute;
-    top: 1px;
-    right: 1px;
-    left: 103px;
-    height: 96px;
-    text-align: center;*/
-    border: 1px solid black;
+    background-color: #019CDE;
+    border: 1px solid #019CDE;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-}
-
-
-.contenu{
-    /*border: 2px solid black;*/
-    /*grid-template-columns: minmax(100px, auto);*/
-    grid-area: 2/1/-1/-1;
-    display: grid;
-    grid-template: repeat(12,1fr)/repeat(10,1fr);
-
-}
-
-.heures{
-    /*top: 1px;
-    left: 1px;
-    bottom: 1px;*/
-    border: 1px solid black;
-    grid-area:2/1/-1/2;
-    display: grid;
-    grid-template-rows: repeat(11, 1fr);
-    
-}
-.heure{
-    text-align:center;
-    border:1px solid black;
-}
-.salles{
-    grid-area:1/2/2/-1 ;
-    background-color: rgb(180, 180, 170);
-    display: grid;
-    grid-template-columns: repeat(9,1fr);
-    border: 1px solid black;
-    
-}
-.matieres{
-    border: 1px black solid;
-    grid-area:2/2/-1/-1;
-    /*background-color: yellowgreen;*/
-    display: grid;
-    grid-template:1fr/repeat(9,1fr);
-}
-.salle{
-    text-align:center;
-    border: 1px solid rgb(0, 0, 0);
-   
-}
-.bloc-matière{
-    border:1px solid black;
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    justify-content: center;
-}
-.matière{
-    border: 1px solid black;
-    padding: 20% 0%;
+    grid-area: 1/2/4/-1;
+    display: table;
     text-align: center;
     
 }
-
-#dixAdouze{
-    border: 1px solid black;
-    grid-area:2/1/3/2;
+.align{
+    display: table-cell;
+    vertical-align: middle;
+}
+.heure{
+    
+    border: 1px solid #019CDE;
+    display: table;
+    background-color: white;
+    font-size: 1em;
+    font-weight: bold;
+}
+#d8{
+    border-top-left-radius: 5px;
+}
+#d17{
+    border-bottom-left-radius: 5px;
+}
+.heure p{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+.salle{
+    border: 1px solid #019CDE;
+    font-size: 1.5em;
+    display: table;
+    background-color: rgb(254, 249, 249);
+    color: black;
+    font-weight: bold;
+}
+.salle p{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    
+}
+.matière{
+    border: 1px solid #019CDE;
+    font-size: 1em;
+    display: table;
+    font-weight: bold;
+}
+.matière p{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+@media screen and (max-width:970px){
+    .matière{
+        font-size: 0.7em;
+    }
+    .salle{
+        font-size: 1em;
+    }
+    h1{
+        font-size: 1.5em;
+    }
+    h2{
+        font-size: 1em;
+    }
+    .heure{
+        font-size: 0.7em;
+    }
 }
 
-#seizeDixHuit{
-    border: 1px solid black;
-    grid-area:5/1/6/2;
+@media screen and (max-width:1000px){
+    .heure{
+        font-size: 0.8em;
+    }
+}
+@media screen and (max-width:570px){
+    .matière{
+        font-size: 0.5em;
+    }
+    .salle{
+        font-size: 0.7em;
+    }
+    h1{
+        font-size: 1.5em;
+    }
+    h2{
+        font-size: 1em;
+    }
+    .heure{
+        font-size: 0.5em;
+    }
 }
 
+@media screen and (min-width:1300px){
+    
+    .heure{
+        font-size: 1.25em;
+    }
+}
+.pause{
+    grid-area: 9/2/11/-1;
+    /*background-color: #EAECEE;*/
+    z-index: 5;
+    background-image: linear-gradient(38deg, #eaecee 47.50%, #019cde 47.50%, #019cde 50%, #eaecee 50%, #eaecee 97.50%, #019cde 97.50%, #019cde 100%);
+    background-size: 32.49px 25.38px;
+}
